--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 
+	<div id="background">
+		<img id="ron" src="./images/ron.png">
+		<img id="snitch" src="./images/snitch.png">
+		<img id="stars" src="./images/stars.png">
+		<img id="boat" src="./images/boat.png">
+		<img id="title" src="./images/title.png">
+		<img id="bird" src="./images/bird.png">
+		<img id="owl" src="./images/owl.png">
+	</div>
+
 </body>
 </html>
